<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.kennethandre.modulo_2.Fragment2">



    <LinearLayout android:id="@+id/tabContenedor1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UserProfile">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/tableLayout2">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/menu"
                        android:textAlignment="center"
                        android:id="@+id/textView"
                        android:layout_above="@+id/tableLayout2"
                        android:layout_centerHorizontal="true"
                        android:textSize="30dp" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/platoFuerte"
                        android:textAlignment="center"
                        android:id="@+id/textView2"
                        android:layout_above="@+id/tableLayout2"
                        android:layout_centerHorizontal="true"
                        android:textSize="15dp" />
                </TableRow>
                <TableRow>
                    <RadioGroup>
                        <RadioButton
                            android:id="@+id/rbtn1"
                            android:text="@string/carne"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbtn2"
                            android:text="@string/pollo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <RadioButton
                            android:id="@+id/rbtn3"
                            android:text="@string/mariscos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </RadioGroup>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/guarniciones"
                        android:textAlignment="center"
                        android:id="@+id/textView3"
                        android:layout_above="@+id/tableLayout2"
                        android:layout_centerHorizontal="true"
                        android:textSize="30dp" />
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/papas"
                        />

                    <CheckBox
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/fideos"
                        />
                </TableRow>
                <TableRow>
                    <CheckBox
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/arroz"
                        />

                    <CheckBox
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/fruta"
                        />
                </TableRow>



            </TableLayout>


        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
