<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.kennethandre.modulo_2.Fragment3">

    <LinearLayout android:id="@+id/tabContenedor2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UserProfile">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/tableLayout3">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/deseaSopa"
                        android:id="@+id/textView4"
                        android:layout_above="@+id/tableLayout2"
                        android:layout_centerHorizontal="true"
                        android:textSize="20dp" />

                    <ToggleButton
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textOff="@string/no"
                        android:textOn="@string/si"
                        />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/deseaFruta"
                        android:id="@+id/textView5"
                        android:layout_above="@+id/tableLayout2"
                        android:layout_centerHorizontal="true"
                        android:textSize="20dp" />

                    <ToggleButton
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textOff="@string/no"
                        android:textOn="@string/si"
                        />
                </TableRow>
                <TableRow>
                    <RadioButton
                        android:id="@+id/rbtn4"
                        android:text="@string/agua"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />

                    <RadioButton
                        android:id="@+id/rbtn5"
                        android:text="@string/soda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        />
                </TableRow>

                <TableRow>
                    <Button
                        android:id="@+id/btnVerOrdenes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agregar"
                        android:layout_weight="1"
                        style="?android:attr/buttonBarButtonStyle"/>
                </TableRow>
            </TableLayout>

        </RelativeLayout>


    </LinearLayout>

</FrameLayout>
