<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Usuario">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/tableLayout2">
        <TableRow>
            <AnalogClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/analogClock"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_column="1" />
        </TableRow>
        <TableRow>

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/Usuario"
                android:drawableLeft="@drawable/ic_action_user"
                android:id="@+id/editText"
                android:layout_column="1" />
        </TableRow>
        <TableRow>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Contraseña"
                android:drawableLeft="@drawable/ic_action_edit"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_column="1" />

        </TableRow>
        <TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ingresar"
                android:id="@+id/button"
                android:layout_span="2" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/TxtRegistrarme"
                android:text="@string/Registrarse"
                android:layout_span="2"
                />
        </TableRow>
    </TableLayout>
</RelativeLayout>
