<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.kennethandre.modulo_2.Fragment1">

    <LinearLayout android:id="@+id/tabContenedor1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UserProfile">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/tableLayout2">
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/bienvenido"
                        android:textAlignment="center"
                        android:id="@+id/textView"
                        android:layout_above="@+id/tableLayout2"
                        android:layout_centerHorizontal="true"
                        android:layout_column="1"
                        android:textSize="40dp" />
                </TableRow>
                <TableRow>
                    <AnalogClock
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/analogClock"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_column="1" />
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                style="?android:attr/buttonBarButtonStyle"
                >
                <Button
                    android:id="@+id/btnVerOrdenes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verOrdenes"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"/>
                <Button
                    android:id="@+id/btnIngresarOrden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingresarOrden"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    </FrameLayout>
